--- a/spotify/style.css
+++ b/spotify/style.css
@@ -7,7 +7,7 @@ body {
     background-color: rgba(17, 17, 88, 0.664);
     background: linear-gradient(to right, rgb(31, 81, 146), rgb(1, 10, 19));
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
 }
 
