--- a/spotify/style.css
+++ b/spotify/style.css
@@ -88,12 +88,20 @@ p {
     color:white;
     justify-self: center;
 }
-
-
-
-
-
-
 .justify-content-center{
     font-size: 13px;
+}
+
+footer{
+    background-color: rgba(128, 128, 128, 0.377);
+}
+.progress-bar{
+
+width: 100%;
+background-color: whitesmoke;
+border-radius: 20px;
+height: 4px;
+margin-top: 10px;
+margin-right: 10px;
+margin-left: 10px;
 }
