--- a/spotify/style.css
+++ b/spotify/style.css
@@ -1,22 +1,18 @@
-* {
-    margin: 0
-}
-
-
 body { 
     background-color: rgba(17, 17, 88, 0.664);
-    background: linear-gradient(to right, rgb(31, 81, 146), rgb(1, 10, 19));
+    background: linear-gradient(to right, rgb(35, 90, 163), rgb(1, 10, 19));
     width: 100%;
     height: 100%;
 
 }
 
 nav {
-    background-color: black;
+    
     justify-content: flex-start;
     position: relative;
-   
     margin-bottom:0;
+    background-color: rgba(0, 0, 0, 0.801);
+    
 }
 
 ul {
@@ -24,13 +20,10 @@ ul {
     height: 100vh;
 }
 
-.container {
-    flex: 1 0 auto;
-}
+
 
 ul li a{
     color:white;
-    
 }
 
 #nav ul li a:hover{
@@ -61,7 +54,6 @@ ul li a:hover{
 }
 
 
-
 .nav-2 {
     background-color: transparent;
     color:white ;
@@ -88,9 +80,14 @@ p {
     color:white;
     justify-self: center;
 }
+
+
+
 .justify-content-center{
     font-size: 13px;
 }
+
+
 
 footer{
     background-color: rgba(128, 128, 128, 0.377);
