--- a/spotify/Trending.css
+++ b/spotify/Trending.css
@@ -1,9 +1,9 @@
 body { 
-    background-color: rgba(17, 17, 88, 0.664);
-    background: linear-gradient(to right, rgb(35, 90, 163), rgb(1, 10, 19));
-    width: 100%;
     height: 100%;
-
+    background-color: rgba(17, 17, 88, 0.664);
+    background: linear-gradient(to right, rgb(68, 68, 177), black);
+   width: 100%;
+   
 }
 
 nav {
