--- a/artist-page/artist-page.css
+++ b/artist-page/artist-page.css
@@ -12,6 +12,25 @@ aside {
 section {
   background-color: rgb(24, 23, 23);
 }
+#hoverr:hover{
+  color: white !important;
+  font-size: 16px !important;
+  font-weight: bolder;
+  font-weight: bold !important;
+ 
+  text-decoration: none;
+  border-left: 3px solid rgb(8, 211, 8) !important;
+  border-bottom: none !important;
+}
+#hoverr:hover::after{
+  height: 3px;
+  border-radius: 30px;
+  width: 40%;
+  background-color: rgb(4, 179, 4);
+
+  bottom: 0;
+
+}
 
 .song-list:hover {
   background-color: rgb(61, 60, 60);
