--- a/artist-page/artist-page.css
+++ b/artist-page/artist-page.css
@@ -31,6 +31,11 @@ section {
   bottom: 0;
 
 }
+#hoverr .active{
+  font-size: 16px;
+  font-weight: bolder;
+}
+
 
 .song-list:hover {
   background-color: rgb(61, 60, 60);
