--- a/spotify/Trending.css
+++ b/spotify/Trending.css
@@ -1,328 +1,176 @@
+@font-face {
+  font-family: "Circular";
+  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot");
+  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff")
+      format("woff"),
+    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.ttf")
+      format("truetype");
+  font-style: normal;
+  font-weight: 700;
+}
 body {
-  background-color: rgba(11, 11, 100, 0.664);
-  background: linear-gradient(to right, rgb(75, 102, 192), black);
-  width: 100%;
-  height: 100vh;
-}
-
-/* the dropdown nav bar for small devices */
-
-#smContainer {
-  width: 100% !important;
-}
-
-#SmallHeader {
-  background-color: black;
-}
-
-#smContent {
-  justify-content: space-around;
-}
-h3 {
-  margin-top: 80px;
-  margin-left: 30px;
-}
-
-nav {
-  background-color: black;
-  justify-content: flex-start;
-  position: relative;
-  margin-left: -10%;
-  margin-bottom: 0;
-  height: 80%;
-}
-
-ul {
-  list-style-type: none;
-  height: 100vh;
-}
-
-.container {
-  flex: 1 0 auto;
-}
-
-ul li a {
-  color: white;
-}
-
-ul li a:hover {
-  font-weight: bold !important;
-  color: white;
-  text-decoration: none;
-}
-
-.a1:hover {
-  color: green;
-  display: inline-block;
-  position: relative;
-}
-.a1.active {
-  font-weight: bold !important;
-}
-.a2.active {
-  font-weight: bold !important;
-}
-
-p a.active {
-  color: white !important;
-}
-a:hover {
-  text-decoration: none;
-  font-weight: bold !important;
-  color: white;
-}
-
-img {
-  height: 200px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-img:hover {
-  opacity: 0.2;
-}
-
-.row {
-  margin-right: 0px !important;
-}
-
-.a1:hover::after {
-  content: "";
-  height: 3px;
-  border-radius: 30px;
-  width: 30%;
-  background-color: rgb(4, 179, 4);
-  position: absolute;
-  left: calc(50% - 15%);
-  bottom: 0;
-  top: 0.5;
-}
-.a2:hover {
-  font-weight: bold !important;
-  color: white;
-  text-decoration: none;
-  border-left: 3px solid rgb(8, 211, 8) !important;
-  border-bottom: none !important;
-}
-.FirstAlbum {
-  width: 100%;
-  flex-wrap: wrap;
+  font-family: "Circular";
+  color: whitesmoke;
 }
 
 
-
-.nav-2 {
-  background-color: transparent;
-  color: white;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin: 20px;
-}
-
-#medium {
-  flex-wrap: nowrap;
-}
-
-.myScroll::-webkit-scrollbar {
-  display: none !important;
-}
-#medium .myScroll {
-  padding-bottom: 1px;
-}
-
-.btnBorder {
-  border-radius: 40px;
-  width: 100%;
-}
-
-.nav-2 ul {
-  height: 50px;
-  width: 700%;
-}
-h1 {
-  color: white;
-  font-size: 38px;
-}
-
-p {
-  color: white;
-  justify-self: center;
-}
-
-.card {
-  background-color: transparent;
-  border: none;
-  color: white;
-  margin: 2px;
-}
-
-.nav-2 {
-  background-color: transparent;
-  color: white;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin: 20px;
-}
-
-#firstAlbum {
-  margin: 0;
-  padding: 0;
-}
-
-#small {
-  width: 100vh;
-}
-#lgFooter {
-  background-color: rgba(85, 84, 84, 0.623);
-  position: sticky;
-  width: 100%;
-}
-#smFooter {
-  position: sticky;
-  width: 100%;
-}
-
-.progress-bar {
-  width: 80%;
-  background-color: whitesmoke;
-  border-radius: 20px;
-  height: 4px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.progress-bar1 {
-  width: 30%;
-  background-color: whitesmoke;
-  border-radius: 20px;
-  height: 4px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.svg-size {
-  width: 2vw;
-  height: 2vw;
-}
-
-/* Don't display Spotify NavBar on small and ekstra small device */
-@media (max-width: 767px) {
-  .navbar {
-    max-width: 90vh;
-    margin-left: 2px;
+.sidebar {
+    background-color: black;
   }
-}
+  .sidebar .img-thumbnail {
+    background-color: black;
+    
+  }
+  .sidebar .nav-item a {
+    color: #93A0B0;
+    font-size: 1.1rem;
+    text-decoration: none;
+  }
+  .sidebar .nav-item i {
+    font-size: 1.3rem;
+  }
+  .sidebar .nav-item.active a, 
+  .sidebar .nav-item a:hover {
+    color: whitesmoke;
+    font-weight: bold !important;
+color: white;
+text-decoration: none;
+border-left: 2px solid rgb(8, 211, 8) !important;
+border-bottom: none !important;
+    
 
-@media (max-width: 575px) {
-  #nav1-medium {
-    display: none;
   }
-  .nav-2 {
-    display: none;
+  .sidebar-sticky ul:last-of-type li:first-of-type button:hover {
+    background-color: black;
+    color: whitesmoke;
+    border: 1px solid white;
+
   }
-  #medium {
-    display: none;
+  .sidebar-sticky ul:last-of-type  .btn-secondary:hover {
+    background-color: white !important;
+    color: black !important;
+    border: 1px solid black !important;
+
+  }
+  .sidebar-sticky ul:last-of-type li:last-of-type  {
+    color: #93A0B0;
+    
+
+  }
+  .navbar-toggler{
+      color: white !important;
+      background-color: rgba(0, 81, 255, 0.164) !important;
   }
 
-  .svg-size {
-    width: 6vw;
-    height: 6vw;
-  }
-}
+  
+     
+    .bolder {
+        font-weight: bold;
+    }
+    .home-content  .container h3 {
+        text-transform: uppercase;
+    }
+    .home-content .container span {
+        font-size: 0.8rem;
+    }
+    .home-content .navbar:not(.fixed-bottom) a{
+      text-transform: uppercase;
+    }
+    .home-content .navbar:not(.fixed-bottom)  .nav-item.active .nav-link,  
+    .home-content .navbar:not(.fixed-bottom)  .nav-item .nav-link:hover  {
+        border-bottom: 2px solid rgba(56, 177, 94, 0.877);
+        color: whitesmoke;
+    }
+    .home-content .nav-item .nav-link,
+    .nav-bottom a  {
+       
+        color: #93A0B0;
+    }
+    .fixed-bottom {
+      background-color: #2C2C2C;
+    }
+    .fixed-bottom .col i {
+      font-size: 1.1rem;
+      color: #B3B3B2;
+    }
+    .fixed-bottom .col i:nth-child(3) {
+      font-size: 3rem !important;
+      color: #B3B3B2;
+    
+    }
+    .col > a > div {
+      position: relative;
+    }
+    .col > a > div:hover:after {
+      
+      position:absolute;
+      left:0; top:0;
+      width:100%; height:100%;
+      display:inline-block;
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+      content: '';
+      z-index: 10;
 
-@media (max-width: 767px) {
-  .nav-2 {
-    display: none;
-  }
-  #medium {
-    display: none;
-  }
-}
+    }
+    
+    #container {
+      position: relative;
+      height: 100% !important;
+      width: 100% !important;
+  
+    }
+    #container div.row {
+      height: 100% !important;
+    }
 
-@media (max-width: 575px) {
-  #nav1-medium {
-    display: none;
-  }
-  #lgFooter {
-    display: none;
-  }
-}
+  
+ 
 
-@media (max-width: 767px) {
-  #lgFooter {
-    display: none;
-  }
-}
-@media (max-width: 2000px) {
-  #smFooter {
-    display: none;
-  }
-}
-@media (max-width: 767px) {
-  #smFooter {
-    display: inline-block;
-  }
-}
+  
+    @media screen and (max-width: 768px ) {
+        .sidebar-sticky .col:last-of-type {
+        padding-bottom: 4rem;
+      }
+     
+      .fixed-bottom .row .col:last-of-type {
+        display: none !important;
+      }
+ 
+     
 
-@media (max-width: 767px) {
-  #small {
-    width: 100%;
-  }
-}
-
-@media (min-width: 576px) {
-  .col-sm-2 {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  #smContent {
-    display: none;
-  }
-}
-
-@media (min-width: 1100px) {
-  .row {
-    flex-wrap: nowrap;
-  }
-}
-
-@media (max-width: 375px) {
-  img {
-    width: 250px !important;
-  }
-}
-@media (max-width: 414px) {
-  img {
-    width: 250px !important;
-  }
-  #SecondImages {
-    margin-left: 5px !important;
-  }
-}
-@media (max-width: 411px) {
-  #SecondImages {
-    margin-left: 5px !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .row {
-    margin-right: 0px !important;
-  }
-}
-
-@media (max-width: 320px) {
-  img {
-    padding-right: 30px !important;
-  }
-}
-@media (max-width: 522px) {
-  #SecondImages {
-    margin-left: 5px !important;
-  }
-}
+     
+      /* .sidebar-sticky .col:last-of-type ul li:last-of-type   {
+       display: block;
+      } */
+      }
+      @media screen and (max-width:320px) {
+        .home-content h3
+       {
+          font-size: 1rem !important;
+          margin-left: 35px !important;
+        }
+        /* .home-content .row {
+          padding-bottom: 7rem !important;
+        } */
+       
+        .home-content .container >h3 +.row, .albums-search {
+         margin-bottom: 15rem !important;
+         }
+         /* .sidebar-sticky .col:last-of-type
+         {
+           padding-bottom: 7rem ;
+         } */
+         .fixed-bottom .row .col:last-of-type {
+           display: none !important;
+         }
+         
+         .container h2 {
+           margin-left: 20px;
+         }
+         
+       
+      
+     }
+    
